tests/cases/borrowing/errors/borrow-control-flow-local-escape.ari
fn main() -> i64 {
  let bad: ref i64 = {
    var inner = 1;
    ref inner
  };
  return 0;
}
